src.new/python/pysuv/srcn/src/uv.pxd


    cdef int uv_if_indextoname(unsigned int ifindex,
                                    char* buffer,
                                    size_t* size)    
    cdef int uv_if_indextoiid(unsigned int ifindex,
                                  char* buffer,
                                  size_t* size)    

    cdef int uv_exepath(char* buffer, size_t* size)    

    cdef int uv_cwd(char* buffer, size_t* size)    

    cdef int uv_chdir(const char* dir)    

        uint64_t uv_get_free_memory(void)    
        uint64_t uv_get_total_memory(void)    
        uint64_t uv_get_constrained_memory(void)    
        uint64_t uv_get_available_memory(void)    

    cdef int uv_clock_gettime(uv_clock_id clock_id, uv_timespec64_t* ts)    
        uint64_t uv_hrtime(void)    
    cdef void uv_sleep(unsigned int msec)    

    cdef void uv_disable_stdio_inheritance(void)    

    cdef int uv_dlopen(const char* filename, uv_lib_t* lib)    
    cdef void uv_dlclose(uv_lib_t* lib)    
    cdef int uv_dlsym(uv_lib_t* lib, const char* name, void** ptr)    
        const char* uv_dlerror(const uv_lib_t* lib)    

    cdef int uv_mutex_init(uv_mutex_t* handle)    
    cdef int uv_mutex_init_recursive(uv_mutex_t* handle)    
    cdef void uv_mutex_destroy(uv_mutex_t* handle)    
    cdef void uv_mutex_lock(uv_mutex_t* handle)    
    cdef int uv_mutex_trylock(uv_mutex_t* handle)    
    cdef void uv_mutex_unlock(uv_mutex_t* handle)    

    cdef int uv_rwlock_init(uv_rwlock_t* rwlock)    
    cdef void uv_rwlock_destroy(uv_rwlock_t* rwlock)    
    cdef void uv_rwlock_rdlock(uv_rwlock_t* rwlock)    
    cdef int uv_rwlock_tryrdlock(uv_rwlock_t* rwlock)    
    cdef void uv_rwlock_rdunlock(uv_rwlock_t* rwlock)    
    cdef void uv_rwlock_wrlock(uv_rwlock_t* rwlock)    
    cdef int uv_rwlock_trywrlock(uv_rwlock_t* rwlock)    
    cdef void uv_rwlock_wrunlock(uv_rwlock_t* rwlock)    

    cdef int uv_sem_init(uv_sem_t* sem, unsigned int value)    
    cdef void uv_sem_destroy(uv_sem_t* sem)    
    cdef void uv_sem_post(uv_sem_t* sem)    
    cdef void uv_sem_wait(uv_sem_t* sem)    
    cdef int uv_sem_trywait(uv_sem_t* sem)    

    cdef int uv_cond_init(uv_cond_t* cond)    
    cdef void uv_cond_destroy(uv_cond_t* cond)    
    cdef void uv_cond_signal(uv_cond_t* cond)    
    cdef void uv_cond_broadcast(uv_cond_t* cond)    

    cdef int uv_barrier_init(uv_barrier_t* barrier, unsigned int count)    
    cdef void uv_barrier_destroy(uv_barrier_t* barrier)    
    cdef int uv_barrier_wait(uv_barrier_t* barrier)    

    cdef void uv_cond_wait(uv_cond_t* cond, uv_mutex_t* mutex)    
    cdef int uv_cond_timedwait(uv_cond_t* cond,
                                    uv_mutex_t* mutex,
                                    uint64_t timeout)    

    cdef void uv_once(uv_once_t* guard, void (*callback)(void))    

    cdef int uv_key_create(uv_key_t* key)    
    cdef void uv_key_delete(uv_key_t* key)    
    cdef void* uv_key_get(uv_key_t* key)    
    cdef void uv_key_set(uv_key_t* key, void* value)    

    cdef int uv_gettimeofday(uv_timeval64_t* tv)    

    typedef void (*uv_thread_cb)(void* arg)    

    cdef int uv_thread_create(uv_thread_t* tid, uv_thread_cb entry, void* arg)    

    typedef enum {
      UV_THREAD_NO_FLAGS = 0x00,
      UV_THREAD_HAS_STACK_SIZE = 0x01
    } uv_thread_create_flags    

    cdef struct uv_thread_options_s {
      unsigned int flags    
      size_t stack_size    
      /* More fields may be added at any time. */
    }    

    typedef struct uv_thread_options_s uv_thread_options_t    

    cdef int uv_thread_create_ex(uv_thread_t* tid,
                                      const uv_thread_options_t* params,
                                      uv_thread_cb entry,
                                      void* arg)    
    cdef int uv_thread_setaffinity(uv_thread_t* tid,
                                        char* cpumask,
                                        char* oldmask,
                                        size_t mask_size)    
    cdef int uv_thread_getaffinity(uv_thread_t* tid,
                                        char* cpumask,
                                        size_t mask_size)    
    cdef int uv_thread_getcpu(void)    
        uv_thread_t uv_thread_self(void)    
    cdef int uv_thread_join(uv_thread_t *tid)    
    cdef int uv_thread_equal(const uv_thread_t* t1, const uv_thread_t* t2)    

    /* The presence of these unions force similar struct layout. */
    #define XX(_, name) uv_ ## name ## _t name    
    union uv_any_handle {
      UV_HANDLE_TYPE_MAP(XX)
    }    

    union uv_any_req {
      UV_REQ_TYPE_MAP(XX)
    }    
    #undef XX


    cdef struct uv_loop_s {
      /* User data - use this for whatever. */
      void* data    
      /* Loop reference counting. */
      unsigned int active_handles    
      struct uv__queue handle_queue    
      union _active_reqs{
        void* unused    
        unsigned int count    
      } active_reqs    
      /* Internal storage for future extensions. */
      void* internal_fields    
      /* Internal flag to signal loop stop. */
      unsigned int stop_flag    
      UV_LOOP_PRIVATE_FIELDS
    }    

        void* uv_loop_get_data(const uv_loop_t*)    
        void uv_loop_set_data(uv_loop_t*, void* data)    

    /* Don't export the private CPP symbols. */
    #undef UV_HANDLE_TYPE_PRIVATE
    #undef UV_REQ_TYPE_PRIVATE
    #undef UV_REQ_PRIVATE_FIELDS
    #undef UV_STREAM_PRIVATE_FIELDS
    #undef UV_TCP_PRIVATE_FIELDS
    #undef UV_PREPARE_PRIVATE_FIELDS
    #undef UV_CHECK_PRIVATE_FIELDS
    #undef UV_IDLE_PRIVATE_FIELDS
    #undef UV_ASYNC_PRIVATE_FIELDS
    #undef UV_TIMER_PRIVATE_FIELDS
    #undef UV_GETADDRINFO_PRIVATE_FIELDS
    #undef UV_GETNAMEINFO_PRIVATE_FIELDS
    #undef UV_FS_REQ_PRIVATE_FIELDS
    #undef UV_WORK_PRIVATE_FIELDS
    #undef UV_FS_EVENT_PRIVATE_FIELDS
    #undef UV_SIGNAL_PRIVATE_FIELDS
    #undef UV_LOOP_PRIVATE_FIELDS
    #undef UV_LOOP_PRIVATE_PLATFORM_FIELDS
    #undef UV__ERR

    #ifdef __cplusplus
    }
    #endif
    #endif /* UV_H */
